# Prometheus

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  bratko.cpp  ordering.cpp  test_suite_benchmark.cpp  testsuite.cpp
cmake/: CodeCoverage.cmake
data/: CloakOpening.book  FullEvalTest.fen  NearlyFullEvalTest.fen  PrometheusOpening.book  PrometheusOpening_old.book  WAC.fen
data/board-test/: FullBoardTest.fen
data/eval-test/: PartialEvalTest.fen
data/perft/: coverage.perft  positions2.perft
data/puzzles/: eco-a01.puz  eco-c65.puz  eco-e92.puz  mate-in-2.puz  mate-in-3.puz
data/test-suites/: BasicTests.fen  BasicTestsSmall.fen  CCROneHourTest.fen  EigenmannsEndgame.fen  Kaufman.fen  README.md  nps_positions.fen  pawns.fen  studies.fen
docker/: Dockerfile
docs/: EngineToDos.md  ToolsReadme.md
gui/: LOTRChess.py
gui/PyLOTRChess/: __init__.py  board.py  boardview.py  color.py  engine_interface.py  square.py
gui/test/: mytest.cpp  pytest.py
include/: attack.hpp  bitmask.hpp  board.hpp  book.hpp  chess_clock.hpp  chess_hash.hpp  chess_move.hpp  defines.hpp  eval.hpp  extern.hpp  globals.hpp  magic.hpp  move_gen.hpp  protocol.hpp  search.hpp  string_manip.hpp  transposition_table.hpp  uci_options.hpp
src/: attack.cpp  bitmask.cpp  board.cpp  book.cpp  chess_clock.cpp  chess_hash.cpp  chess_move.cpp  eval.cpp  magic.cpp  main.cpp  move_gen.cpp  protocol.cpp  search.cpp  string_manip.cpp  transposition_table.cpp  uci_options.cpp
test/: CMakeLists.txt  attack_test.cpp  basic_test.cpp  bitmask_test.cpp  board_test.cpp  book_test.cpp  chess_clock_test.cpp  chess_hash_test.cpp  chess_move_test.cpp  eval_test.cpp  perft_test.cpp  search_test.cpp  string_manip_test.cpp  transposition_table_test.cpp  ucis_options_test.cpp
tools/: CMakeLists.txt  Ordering.jl  OrderingCompare.jl  README.md  TestSuiteReader.jl
tools/CloakTools.jl/: CloakTools.jl  stats.jl  test_suites.jl
tools/data/: CloakOpening.book  ParsedOrdering.hdf5  Proto.book  SubsetProto.book  bratko.txt  eigenmann.txt  kaufman.txt  measurements.txt  ordering_output.txt
tools/data/Regression_00/: Bratko_Kopec.txt  WAC.txt  metadata.txt  out.pgn
tools/julia/: measurements.txt
tools/math/: hypothesis_testing.hpp  math.hpp  optimization.hpp  stopwatch.hpp  summary_statistics.hpp
tools/move-ordering/: Ordering.jl  OrderingCompare.jl
tools/opening-book/: README.md  book_maker.cpp  proto.book  td_book_maker.cpp  train_book.cpp
tools/performance-analysis/: move_ordering.cpp
tools/scripts/: run-docker.sh
tools/tune/: tune.cpp  tune.hpp  tune_runner.cpp  tuner.cpp
