add_executable(AttackTestRunner attack_test.cpp)
add_executable(BitmaskTestRunner bitmask_test.cpp)
add_executable(BoardTestRunner board_test.cpp)
add_executable(ChessClockTestRunner chess_clock_test.cpp)
add_executable(ChessHashTestRunner chess_hash_test.cpp)
add_executable(ChessMoveTestRunner chess_move_test.cpp)
add_executable(StringManipTestRunner string_manip_test.cpp)
add_executable(UCIOptionsTestRunner ucis_options_test.cpp)
add_executable(PerftTestRunner perft_test.cpp)
add_executable(EvalTestRunner eval_test.cpp)

target_link_libraries(AttackTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(BitmaskTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(BoardTestRunner Prometheus-lib ${GTEST_LIBRARIES}  Threads::Threads)
target_link_libraries(ChessClockTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(ChessHashTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(ChessMoveTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(StringManipTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(UCIOptionsTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(PerftTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(EvalTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)

add_test(AttackTest AttackTestRunner)
add_test(BitmaskTest BitmaskTestRunner)
add_test(BoardTest BoardTestRunner)
add_test(ChessClockTest ChessClockTestRunner)
add_test(ChessHashTest ChessHashTestRunner)
add_test(ChessMoveTest ChessMoveTestRunner)
add_test(StringManipTest StringManipTestRunner)
add_test(UCIOptionsTest UCIOptionsTestRunner)
add_test(PerftTest PerftTestRunner)
add_test(EvalTest EvalTestRunner)