add_executable(BitmaskTestRunner bitmask_test.cpp)
add_executable(BoardTestRunner board_test.cpp)
add_executable(ChessClockTestRunner chess_clock_test.cpp)
add_executable(ChessHashTestRunner chess_hash_test.cpp)
add_executable(ChessMoveTestRunner chess_move_test.cpp)
add_executable(StringManipTestRunner string_manip_test.cpp)
add_executable(UCIOptionsTestRunner ucis_options_test.cpp)
add_executable(PerftTestRunner perft_test.cpp)
add_executable(EvalTestRunner eval_test.cpp)
add_executable(SearchTestRunner search_test.cpp)
add_executable(TranspositionTableTestRunner transposition_table_test.cpp)

if (CODE_COVERAGE MATCHES ON)
    target_link_libraries(BitmaskTestRunner --coverage)
    target_link_libraries(BoardTestRunner --coverage)
    target_link_libraries(ChessClockTestRunner --coverage)
    target_link_libraries(ChessHashTestRunner --coverage)
    target_link_libraries(ChessMoveTestRunner --coverage)
    target_link_libraries(StringManipTestRunner --coverage)
    target_link_libraries(UCIOptionsTestRunner --coverage)
    target_link_libraries(PerftTestRunner --coverage)
    target_link_libraries(EvalTestRunner --coverage)
    target_link_libraries(SearchTestRunner --coverage)
    target_link_libraries(TranspositionTableTestRunner --coverage)
endif()

target_link_libraries(BitmaskTestRunner Cloak-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(BoardTestRunner Cloak-lib ${GTEST_LIBRARIES}  Threads::Threads)
target_link_libraries(ChessClockTestRunner Cloak-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(ChessHashTestRunner Cloak-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(ChessMoveTestRunner Cloak-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(StringManipTestRunner Cloak-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(UCIOptionsTestRunner Cloak-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(PerftTestRunner Cloak-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(EvalTestRunner Cloak-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(SearchTestRunner Cloak-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(TranspositionTableTestRunner Cloak-lib ${GTEST_LIBRARIES} Threads::Threads)

add_test(BitmaskTest BitmaskTestRunner)
add_test(BoardTest BoardTestRunner)
add_test(ChessClockTest ChessClockTestRunner)
add_test(ChessHashTest ChessHashTestRunner)
add_test(ChessMoveTest ChessMoveTestRunner)
add_test(StringManipTest StringManipTestRunner)
add_test(UCIOptionsTest UCIOptionsTestRunner)
add_test(PerftTest PerftTestRunner)
add_test(EvalTest EvalTestRunner)
add_test(TranspositionTable TranspositionTableTestRunner)
