add_executable(BoardTestRunner board_test.cpp)
add_executable(BookTestRunner book_test.cpp)
add_executable(ChessClockTestRunner chess_clock_test.cpp)
add_executable(ChessMoveTestRunner chess_move_test.cpp)
add_executable(UCIOptionsTestRunner ucis_options_test.cpp)
add_executable(PerftTestRunner perft_test.cpp)
add_executable(EvalTestRunner eval_test.cpp)
add_executable(TranspositionTableTestRunner transposition_table_test.cpp)

target_link_libraries(BoardTestRunner Prometheus-lib ${GTEST_LIBRARIES}  Threads::Threads)
target_link_libraries(BookTestRunner Prometheus-lib ${GTEST_LIBRARIES}  Threads::Threads)
target_link_libraries(ChessClockTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(ChessMoveTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(UCIOptionsTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(PerftTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(EvalTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)
target_link_libraries(TranspositionTableTestRunner Prometheus-lib ${GTEST_LIBRARIES} Threads::Threads)

add_test(BoardTest BoardTestRunner)
add_test(BookTest BookTestRunner)
add_test(ChessClockTest ChessClockTestRunner)
add_test(ChessMoveTest ChessMoveTestRunner)
add_test(UCIOptionsTest UCIOptionsTestRunner)
add_test(PerftTest PerftTestRunner)
add_test(EvalTest EvalTestRunner)
add_test(TranspositionTable TranspositionTableTestRunner)
